Revision history for SPVM
0.9019  2021-12-16
        [CHANGES]
        * Rename SPVM::Builder::Config's get_libs, set_libs, unshift_libs, push_libs method to get_runtime_libs, set_runtime_libs, unshift_runtime_libs, push_runtime_libs
          and don't add libraries to linker flags of linker.
        * remove SPVM::Builder::Exe again because one executable that is portable and work correctly without function conflicts is impossible after long thinking.
          The implementation before removing is saved at the following branch.
          
          https://github.com/yuki-kimoto/SPVM/releases/tag/before_remove_exe_20211216
        
        * SPVM::Builder::Config "ccflags" default becomes empty string.
        * Remove delete_std and get_std of SPVM::Builder::Config
        * SPVM::Builder::CC->compile don't depend on Perl compiled environment.
        
0.9018  2021-12-11
        [CHANGES]
        * Depends on ExtUtils::CBuilder for Perl 5.8
        
        [BUG FIXES]
        * Fix bugs that tests of SPVM fails in some old Perl version. 
0.9017  2021-12-11
        [CHANGES]
        * The parts of Makefile created by SPVM::Builder::Util::create_class_make_rule() become
          more compatible the Makefile created by ExtUtils::MakeMaker.
          This will maybe fix the fail of solaris make.
        
        [BUG FIXES]
        * Fix bugs that Fn->substr method is changed to Fn->methodstr by a mistake
        * Fix a bug that the return type of Fn->abs method was double. This become int type
        * Fix a bug that the return type of Fn->labs method was double. This become long type
        
0.9016  2021-12-08
        [CHANGES]
        * In Exchange API call method argument Perl refenrece to SPVM numeric reference convision,
          the Perl reference must be scalar reference which referenced value is non-ref scalar.
        * exchange api $string->to_string become croak if sv_utf8_docede fails.