@@ -3,14 +3,15 @@ Revision history for SPVM
         [CHANGES]
         * Rename SPVM::Builder::Config's get_libs, set_libs, unshift_libs, push_libs method to get_runtime_libs, set_runtime_libs, unshift_runtime_libs, push_runtime_libs
           and don't add libraries to linker flags of linker.
-        * remove SPVM::Builder::Exe again because one executable that is portable and work correctly without function conflicts is impossible after long thinking.
+        * remove SPVM::Builder::Exe and spvmcc command again because one executable that is portable and work correctly without function conflicts is impossible after long thinking.
           The implementation before removing is saved at the following branch.
           
           https://github.com/yuki-kimoto/SPVM/releases/tag/before_remove_exe_20211216
         
-        * SPVM::Builder::Config "ccflags" default becomes empty string.
+        * SPVM::Builder::Config "ccflags" default becomes empty string except for Windows. Windows is "-fPIC"
         * Remove delete_std and get_std of SPVM::Builder::Config
         * SPVM::Builder::CC->compile don't depend on Perl compiled environment.
+        * add SPVM_DEBUG_CC enviroment variable to print SVPM::Builder::CC compile and link outputs to stderr.
         
 0.9018  2021-12-11
         [CHANGES]
